--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1,4 +1,4 @@
-%!TEX root = forallxadl.tex
+%!TEX root = forallx-adl.tex
 \part{Natural Deduction for \FOL}
 \label{ch.NDFOL}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
