--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -1,4 +1,4 @@
-%!TEX root = forallxadl.tex
+%!TEX root = forallx-adl.tex
 \part{The Language of Sentential Logic}
 \label{ch.TFL}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
