--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -1,4 +1,4 @@
-%!TEX root = forallxadl.tex
+%!TEX root = forallx-adl.tex
 \ProvidesPackage{forallx-adl}[2011/10/29 support for a logic textbook]
 % The original forallx.sty was written in 2005
 % Comments marked "TB" are additions by Tim Button in September 2012
