--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -1,4 +1,4 @@
-%!TEX root = forallxadl.tex
+%!TEX root = forallx-adl.tex
 \part{The Language of Quantified Logic}
 \label{ch.FOL}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
