--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -1,4 +1,4 @@
-%!TEX root = forallxadl.tex
+%!TEX root = forallx-adl.tex
 \part{Interpretations}
 \label{ch.semantics}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
