tweak practice exercises description

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -60,7 +60,7 @@ But in analysing an argument, there is no substitute for a good nose.
 
 
 \practiceproblems
-At the end of some sections, there are problems that review and explore the material covered in the chapter. There is no substitute for actually working through some problems, because logic is more about a way of thinking than it is about memorising facts.\\[12pt]
+At the end of almost every sections, there are practice exercises that review and explore the material covered in the chapter. There is no substitute for actually working through some problems, because logic is more about cultivating a \emph{way of thinking} than it is about memorising facts.\\[12pt]
 
 \problempart What is the difference between argument in the everyday sense, and in the logicians’ sense? What is the point of logical arguments?
 
